figure image caption styling - fixed alignment, image border

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -191,12 +191,17 @@ dd {
 
 .figure {
     display: table;
+    top: 50px;
+    background-color: #ccc;
+    padding-bottom: 15px;
 }
 .figure img {
     width: 100%;
     height: auto;
 }
 .figure .caption {
+    position: relative;
+    left: 15px;
     display: table-caption;
     caption-side: bottom;
 }
@@ -253,7 +258,7 @@ dd {
   position: relative;
   border: none;
   top: 100px;
-  left: -50px;
+  left: -70px;
   font-size: 30px;
   color: black;
   float: left;
